--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,60 +1,70 @@
-<div id="headerBurger">
-  <h1>Burgers!</h1>
-</div>
+<div id="containBurger">
 
-<div id="burgerImg">
-  <img src="/assets/img/burger.jpeg" alt="burger">
+  <div id="not_devoured">
+  <h2>Burgers you haven't devoured yet!</h2>
+  <ul>
+    {{!-- For each burger in the database... --}}
+    {{#each burgers}}
+      {{!-- Unless already devoured... --}}
+      {{#unless this.devoured}}
+        <li>
+          {{!-- List the name of each burger --}}
+          {{this.burger_name}}
 
-</div>
+          <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+            <input type="hidden" name="devoured" value="true">
+            {{!-- On click, change the bool to TRUE --}}
+            <button type="submit">Devour!</button>
+          </form>
 
-<div id="not_devoured">
-<h2>Burgers you haven't devoured yet!</h2>
-<ul>
-  {{!-- For each burger in the database... --}}
-  {{#each burgers}}
-    {{!-- Unless already devoured... --}}
-    {{#unless this.devoured}}
-      <li>
-        {{!-- List the name of each burger --}}
-        {{this.burger_name}}
+          {{!-- allow user to delete burger from database --}}
+          {{> burgers/delete-burger}}
+        </li>
+      {{/unless}}
+    {{/each}}
+  </ul>
+  </div>
 
-        <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devoured" value="true">
-          {{!-- On click, change the bool to TRUE --}}
-          <button type="submit">Devour!</button>
-        </form>
+  <div id="midBurger">
 
-        {{!-- allow user to delete burger from database --}}
-        {{> burgers/delete-burger}}
-      </li>
-    {{/unless}}
-  {{/each}}
-</ul>
-</div>
+    <div id="headerBurger">
+      <h1>Burgers!</h1>
+      {{!-- <h3>created by Alex Nam Kim</h3> --}}
 
-<div id="yes_devoured">
-<h2>Burgers you've devoured!</h2>
+    </div>
 
-<ul>
-  {{#each burgers}}
-    {{#if this.devoured}}
-      <li>
-        {{this.burger_name}}
+    <div id="burgerImg">
+      <img src="/assets/img/burger.jpeg" id="burgerJpg" alt="burger">
 
-        <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devoured" value="false">
-          <button type="submit">Un-devour!</button>
-        </form>
+    </div>
 
-        {{> burgers/delete-burger}}
-      </li>
-    {{/if}}
-  {{/each}}
-</ul>
+  </div>
+
+  <div id="yes_devoured">
+  <h2>Burgers you've devoured!</h2>
+
+  <ul>
+    {{#each burgers}}
+      {{#if this.devoured}}
+        <li>
+          {{this.burger_name}}
+
+          <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+            <input type="hidden" name="devoured" value="false">
+            <button type="submit">Un-devour!</button>
+          </form>
+
+          {{> burgers/delete-burger}}
+        </li>
+      {{/if}}
+    {{/each}}
+  </ul>
+  </div>
+  <br style="clear: left;" />
 </div>
 
 <div id="createBurger">
-<h2>Add a Burger</h2>
+<h2 class="addBurger">Add a Burger</h2>
 <form class="create-update-form" action="burgers/create" method="POST">
 
   <div class="form-group">
@@ -63,9 +73,9 @@
   </div>
 
   <div class="form-group">
-    <label for="slee">Devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Un-devoured
+    {{!-- <label for="slee">Devoured?</label><br> --}}
+    {{!-- <input type="radio" name="devoured" value="1" > Devoured!<br> --}}
+    <input type="radio" name="devoured" value="0" checked> Ready to Devour?
   </div>
 
   <button type="submit">Add Burger</button>
